--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imageoptim-cli",
+  "name": "imageoptim-cli-js",
   "description": "Automates ImageOptim, ImageAlpha, and JPEGmini for Mac to make batch optimisation of images part of your automated build process.",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "author": "Jamie Mason <jamie@foldleft.io> (https://github.com/JamieMason)",
   "bin": {
     "imageoptim": "dist/imageoptim"
@@ -31,6 +31,7 @@
     "execa": "2.0.4",
     "fs-extra": "8.1.0",
     "globby": "10.0.1",
+    "image-marker": "^0.1.1",
     "pretty-bytes": "5.3.0"
   },
   "devDependencies": {
