--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imageoptim-cli-js",
   "description": "Automates ImageOptim, ImageAlpha, and JPEGmini for Mac to make batch optimisation of images part of your automated build process.",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "author": "Jamie Mason <jamie@foldleft.io> (https://github.com/JamieMason)",
   "bin": {
     "imageoptim": "dist/imageoptim"
@@ -29,9 +29,10 @@
     "chalk": "2.4.2",
     "commander": "3.0.1",
     "execa": "2.0.4",
+    "file-type": "^16.5.1",
     "fs-extra": "8.1.0",
     "globby": "10.0.1",
-    "image-marker": "^0.1.1",
+    "image-marker": "^0.1.2",
     "pretty-bytes": "5.3.0"
   },
   "devDependencies": {
